--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
             </a>
           </div>
           <nav class="navbar-menu">
-            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="work.html" class="navbar-menu-item w-inline-block">
-              <div class="navbar-menu-item-text">Work</div>
+            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
+              <div class="navbar-menu-item-text">Inicio</div>
               <div class="navbar-item-line"></div>
             </a>
-            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="service.html" class="navbar-menu-item w-inline-block">
+            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
               <div class="navbar-menu-item-text">Servicios</div>
               <div class="navbar-item-line"></div>
             </a>
-            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="about.html" class="navbar-menu-item w-inline-block">
+            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
               <div class="navbar-menu-item-text">Nosotros</div>
               <div class="navbar-item-line"></div>
             </a>
-            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="blog.html" class="navbar-menu-item w-inline-block">
+            <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
               <div class="navbar-menu-item-text">Blog</div>
               <div class="navbar-item-line"></div>
             </a>
@@ -97,7 +97,7 @@
         <div id="w-node-_27821f9c-524e-9fb5-c2dd-c9ef1cd1e544-1cd1e52e" class="navbar-small-right">
           <nav class="navbar-small-menu">
             <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
-              <div class="navbar-menu-item-text">Work</div>
+              <div class="navbar-menu-item-text">Inicio</div>
               <div class="navbar-item-line"></div>
             </a>
             <a data-w-id="6e15c14e-1146-0b20-61d1-6721f0646d5a" href="#" class="navbar-menu-item w-inline-block">
@@ -126,13 +126,13 @@
       <div class="mobile-menu-wrapper">
         <nav class="mobile-menu-nav">
           <a href="work.html" class="mobile-menu-nav-item w-inline-block">
-            <div class="menu-nav-item-text">Work</div>
+            <div class="menu-nav-item-text">Inicio</div>
           </a>
           <a href="about.html" class="mobile-menu-nav-item w-inline-block">
-            <div class="menu-nav-item-text">About</div>
+            <div class="menu-nav-item-text">Nosotros</div>
           </a>
           <a href="service.html" class="mobile-menu-nav-item w-inline-block">
-            <div class="menu-nav-item-text">Services</div>
+            <div class="menu-nav-item-text">Servicios</div>
           </a>
           <a href="blog.html" class="mobile-menu-nav-item w-inline-block">
             <div class="menu-nav-item-text">Blog</div>
@@ -192,35 +192,92 @@
             </div>
             <div class="home-hero-right-bottom">
               <div class="margin-bottom margin-medium">
-                <div data-w-id="b938366f-36f5-3abd-16d1-bfc45d5bc007" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted">(About Us)</div>
+                <div data-w-id="b938366f-36f5-3abd-16d1-bfc45d5bc007" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted">Desde el 2010</div>
               </div>
               <div class="margin-bottom margin-medium">
                 <div class="margin-bottom margin-tiny">
                   <div class="overflow-hidden">
-                    <h2 data-w-id="644ea88c-5780-cb1a-3630-f3c1b34add5f" style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h2">Creative</h2>
+                    <h2 
+                      data-w-id="644ea88c-5780-cb1a-3630-f3c1b34add5f" 
+                      style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" 
+                      class="heading-style-h2">
+                      Obamacare
+                    </h2>
                   </div>
                 </div>
-                <div class="margin-bottom margin-tiny">
-                  <div class="overflow-hidden">
-                    <h2 data-w-id="9a4c9eef-9756-5a66-6559-3800d641a620" style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h2">Brands.</h2>
-                  </div>
-                </div>
-                <div class="margin-bottom margin-tiny">
-                  <div class="overflow-hidden">
-                    <h2 data-w-id="844a9563-dfad-01f4-59b4-e0f764f63c07" style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h2">Powerful</h2>
-                  </div>
-                </div>
-                <div class="overflow-hidden">
-                  <h2 data-w-id="0478f6b5-ca28-9a5c-cace-a33bebf507a4" style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="heading-style-h2">Websites.</h2>
-                </div>
+                
               </div>
+
               <div class="margin-bottom margin-xhuge">
                 <div class="max-width-large">
-                  <p data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-color-muted">At our Oslo-based architecture studio, we are dedicated to creating spaces that inspire and endure. Specializing in commercial, multipurpose, and residential architecture, we blend creativity with functionality to bring your vision to life. Our approach is rooted in sustainability, ensuring that each project not only meets current needs but also contributes positively to the environment.<br><br>Our team of passionate architects and designers works closely with clients, fostering a collaborative process that prioritizes your unique needs and preferences. We believe that the best designs come from understanding the nuances of each project, from the bustling energy of commercial spaces to the versatile requirements of multipurpose facilities and the personalized touches of residential homes.</p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    La Ley de Cuidados de Salud a Bajo Precio (ACA) es una reforma de atención médica que aborda la cobertura, los costos y la atención preventiva del seguro médico.
+                    Esta ley, a menudo conocida como <b style="color:#000;">Obamacare</b>, fue promulgada en marzo de 2010 por el presidente Barack Obama.
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    Según la ACA, quienes estaban asegurados en planes con primas altas o planes de beneficios limitados ahora pueden ser elegibles para planes de salud más asequibles con beneficios esenciales, como:
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Chequeos anuales
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Maternidad y atención para el recién nacido
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Medicinas recetadas
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de emergencia
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de salud mental
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de pediatría y más
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    Estás a un paso de acceder a ellos. ¿Fácil no?
+                  </p>
+                  <a href="contact.html" class="button-text w-inline-block">
+                    <div class="button-text-inner">
+                      <div class="button-text-text">Agenda una cita ahora. . .</div>
+                      <div class="button-text-line" style="width: 100%;"></div>
+                    </div>
+                  </a>
                 </div>
               </div>
               <div class="margin-bottom margin-large">
-                <div data-w-id="c0ab37a0-51e1-d008-a23b-7bcf7b9a640a" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted">Aliados comerciales</div>
+                <div data-w-id="c0ab37a0-51e1-d008-a23b-7bcf7b9a640a" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted">Nuestros aliados comerciales</div>
               </div>
               <div class="light-mode">
                 <div data-w-id="720d6df2-f328-75b5-cdfe-687978c04105" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="home-hero-logos light"><img src="images/logo-01.svg" loading="lazy" id="w-node-_01cc26bd-16e4-da7b-915e-1bcf43ab9983-e7999ea0" height="35" alt="Logo"><img src="images/logo-02.svg" loading="lazy" id="w-node-_7e5ebfc4-70d2-d4c0-aaf8-581f7aeef840-e7999ea0" height="35" alt="Logo"><img src="images/logo-03.svg" loading="lazy" id="w-node-a640d232-9462-3db2-bbdb-2205e801a7c5-e7999ea0" height="35" alt="Logo"><img src="images/logo-04.svg" loading="lazy" id="w-node-_22714430-9b84-cda1-32c2-8e58dff3e57e-e7999ea0" height="35" alt="Logo"><img src="images/logo-05.svg" loading="lazy" id="w-node-_7a0f3957-7b9c-a6aa-7f12-83854ae7f016-e7999ea0" height="35" alt="Logo"><img src="images/logo-06.svg" loading="lazy" id="w-node-_396a61f9-e171-d225-01ae-7fd0f235aa08-e7999ea0" height="35" alt="Logo"></div>
@@ -348,7 +405,7 @@
               <p 
                 data-w-id="be0dced0-c6d0-8cc3-dfa6-cf00780a1d57" 
                 style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
-                class="heading-alt-h2">
+                class="heading-alt-h3">
                 Atención personalizada desde el primer contacto, con profesionales capacitados y dispuestos a aclarar tus dudas.
               </p>
             </div>
