--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=67c4dc19ff02e7f9e7999e3f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script>
-  window.addEventListener('scroll', function() {
+  /*window.addEventListener('scroll', function() {
     const header = document.querySelector('.header-small');
     const logo = document.querySelector('.logo-header');
     const isDarkTheme = document.body.classList.contains('theme-dark');
@@ -689,15 +689,18 @@
     logo.src = isDarkTheme ? 'images/fg-full-blanco-dorado.svg' : 'images/fg-full-negro-dorado.svg';
 
    
-  });
+  });*/
 
   document.querySelector('.toggle-color').addEventListener('click', function() {
     document.body.classList.toggle('theme-dark');
     const logo = document.querySelector('.logo-header');
+    const logoMovil = document.querySelector('.logo_movil');
     const logoFooter=document.querySelector('.logo-footer');
     const isDarkTheme = document.body.classList.contains('theme-dark');
 
     logo.src = isDarkTheme ? 'images/fg-full-blanco-dorado.svg' : 'images/fg-full-negro-dorado.svg';
+
+    logoMovil.src = isDarkTheme ? 'images/fg-imagitipo-blanco-dorado.svg' : 'images/fg-imagitipo-negro-dorado.svg';
 
     logoFooter.src = isDarkTheme ? 'images/fg-full-negro-dorado.svg' : 'images/fg-full-blanco-dorado.svg';
     
