Respaldo antes de nubia

--- a/index RESPALDO.html
+++ b/index RESPALDO.html
@@ -175,9 +175,92 @@
                 </div>
               </div>
             </div>
-
             <div class="home-hero-right-bottom">
+              <div class="margin-bottom margin-medium">
+                <div data-w-id="b938366f-36f5-3abd-16d1-bfc45d5bc007" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted">Desde el 2010</div>
+              </div>
+              <div class="margin-bottom margin-medium">
+                <div class="margin-bottom margin-tiny">
+                  <div class="overflow-hidden">
+                    <h2 
+                      data-w-id="644ea88c-5780-cb1a-3630-f3c1b34add5f" 
+                      style="-webkit-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 105%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" 
+                      class="heading-style-large">
+                      Obamacare
+                    </h2>
+                  </div>
+                </div>
+                
+              </div>
 
+              <div class="margin-bottom margin-xhuge">
+                <div class="max-width-large">
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    La Ley de Cuidados de Salud a Bajo Precio (ACA) es una reforma de atención médica que aborda la cobertura, los costos y la atención preventiva del seguro médico.
+                    Esta ley, a menudo conocida como <b style="color: #00BBC9;">Obamacare</b>, fue promulgada en marzo de 2010 por el presidente Barack Obama.
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    Según la ACA, quienes estaban asegurados en planes con primas altas o planes de beneficios limitados ahora pueden ser elegibles para planes de salud más asequibles con beneficios esenciales, como:
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Chequeos anuales
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Maternidad y atención para el recién nacido
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Medicinas recetadas
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de emergencia
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de salud mental
+                  </p>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    <img src="/images/check-circle-svgrepo-com 1.svg" width="28px" class="icon-check"> Servicios de pediatría y más
+                  </p>
+                  <br>
+                  <p 
+                    data-w-id="7400725d-f4bd-c88e-5843-411d5e542c8d" 
+                    style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" 
+                    class="text-color-muted">
+                    Estás a un paso de acceder a ellos. ¿Fácil no?
+                  </p>
+                  <a href="#" class="button-text w-inline-block">
+                    <div class="button-text-inner">
+                      <div class="button-text-text">Agenda una cita ahora. . .</div>
+                      <div class="button-text-line" style="width: 100%;"></div>
+                    </div>
+                  </a>
+                </div>
+              </div>
               <div class="margin-bottom margin-large">
                 <div data-w-id="c0ab37a0-51e1-d008-a23b-7bcf7b9a640a" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="text-meta text-color-muted text-align-center">Nuestros aliados comerciales</div>
               </div>
@@ -188,7 +271,6 @@
                 <div data-w-id="1fe6c776-ca77-a207-d206-368f1da32698" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="home-hero-logos"><img src="images/logo-01-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da32699-e7999ea0" height="35" alt="Logo"><img src="images/logo-02-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da3269a-e7999ea0" height="35" alt="Logo"><img src="images/logo-03-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da3269b-e7999ea0" height="35" alt="Logo"><img src="images/logo-04-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da3269c-e7999ea0" height="35" alt="Logo"><img src="images/logo-05-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da3269d-e7999ea0" height="35" alt="Logo"><img src="images/logo-06-inverse.svg" loading="lazy" id="w-node-_1fe6c776-ca77-a207-d206-368f1da3269e-e7999ea0" height="35" alt="Logo"></div>
               </div>
             </div>
-            
           </div>
         </div>
       </section>
